Alterando Aluragio para giogiomovies

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
-    <title>ALURAGIO</title>
+    <title>giogiomovies</title>
 </head>
 
 <BODY>
 
-    <header>ALURAGIO</header>
+    <header>giogiomovies</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -28,7 +28,7 @@
         </div>
     </section>
 
-<section>
+<section class="categoria">
     <h2>Filmes e diversas opiniões!!! </h2>
     <div class="categoria-videos ">
        
